--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,12 @@
-.Rproj.user
-.Rhistory
-.RData
-
-.DS_Store
-
-data/*/*
-!data/process/*
-!README.md
-
-*.qsub*
-mothur*logfile
-*temp*
 *.docx
+*.log
+*.logfile
+*.out
+*temp*
+.DS_Store
+.history/
+.RData
+.Rhistory
+.Rproj.user
+.snakemake/
+data/
