--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install build dependencies
         run: |
-          Rscript -e "install.packages(c('styler','usethis', 'testthat', 'tidyverse', 'here'))"
+          Rscript -e "install.packages(c('knitr', 'styler','usethis', 'testthat', 'tidyverse', 'here'))"
           python -m pip install --upgrade pip
           pip install black snakefmt
       - name: Style R code
