--- a/config/slurm/config.yaml
+++ b/config/slurm/config.yaml
@@ -1,17 +1,31 @@
-cluster: "sbatch 
-            --job-name {cluster.jobname} 
-            --account {cluster.account_slurm} 
-            --partition {cluster.partition} 
-            --mail-user {cluster.email} 
-            --mail-type {cluster.mail_type} 
-            --nodes {cluster.nodes} 
-            --ntasks {cluster.procs} 
-            --mem-per-cpu {cluster.pmem} 
-            --time {cluster.walltime} 
-            --output {cluster.outfile}
-            "
-cluster-config: "config/cluster.yaml"
-jobs: 4999
-immediate-submit: False
-verbose: true
-notemp: true
+# cluster commands
+cluster: 
+  # Make the hpc output folder for the rule
+  mkdir -p log/hpc/`date +"%d-%m-%y"`/{rule} &&
+  sbatch 
+    --job-name=smk-{rule}-{wildcards}
+    --output log/hpc/`date +"%d-%m-%y"`/{rule}/{rule}-{wildcards}-%j.out 
+    --account=pschloss1
+    --partition={resources.partition} 
+    --time={resources.time_min} 
+    --mem={resources.mem_mb} 
+    --cpus-per-task={threads} 
+
+# default resources used for rules with no Resources specified
+default-resources: 
+  - mem_mb=4000
+  - partition=standard
+  - time_min=360
+  - threads=4
+  
+# snakemake args
+jobs: 999
+printshellcmds: True
+scheduler: "greedy"
+rerun-incomplete: true
+use-conda: true
+conda-frontend: "mamba"
+keep-going: true
+latency-wait: 120
+# Max resources at a time for all jobs
+#resources: [cpus=100, mem_mb=100000]
